<resources>
    <string name="app_name">Play Movie</string>
    <string name="movie_name">Movie</string>
    <string name="tv_show_name">TV Show</string>
    <string name="setting_name">Settings</string>
    <string name="favorite_name">Favorite</string>
    <string name="delete_name">Delete</string>
    <string name="search_name">Search here</string>
    <string name="search_movie_name">Search Movie</string>
    <string name="search_tv_name">Search TV Show</string>
    <string name="en_setting_name">English</string>
    <string name="id_setting_name">Bahasa Indonesia</string>
    <string name="lang_name">Language</string>
    <string name="reminder_name">Reminder</string>
    <string name="reminder_daily_name">Daily Reminder</string>
    <string name="reminder_release_name">Release Reminder</string>

    <!-- DUMMY CONTENT -->
    <string name="img_desc_dummy">Dummy Image Description</string>
    <string name="msg_language_dummy">Successfully changed language</string>
    <string name="msg_subtitle_not_found">Description not available.</string>
    <string name="msg_insert_success">Successfully added a favorite</string>
    <string name="msg_delete_success">Successfully delete favorite</string>
    <string name="msg_insert_failed">Failed to add favorite</string>
    <string name="msg_not_found">There is no favorite data yet.</string>
    <string name="msg_delete">Do you want to delete It?</string>

    <!-- API KEY -->
    <string name="api_key">b6f810a237345f0a4be9c241835b2a9b</string>

    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="appwidget_text">Play Movie</string>
    <string name="add_widget">Add widget</string>

    <!--
    DUMMY
    <string-array name="title_movie">
        <item>A Star Is Born</item>
        <item>Aquaman</item>
        <item>Avengers: Infinity War</item>
        <item>Bird Box</item>
        <item>Bohemian Rhapsody</item>
        <item>Bumblebee</item>
        <item>Creed II</item>
        <item>Deadpool 2</item>
        <item>How to Train Your Dragon: The Hidden World</item>
        <item>Glass</item>
        <item>Hunter Killer</item>
        <item>Mortal Engines</item>
    </string-array>
    <string-array name="title_tv_show">
        <item>Arrow</item>
        <item>Doom Patrol</item>
        <item>Dragon Ball</item>
        <item>Fairy Tail</item>
        <item>Family Guy</item>
        <item>The Flash</item>
        <item>Got II</item>
        <item>Gotham</item>
        <item>Greys Anatomi</item>
        <item>Hanna</item>
        <item>Iron Fist</item>
        <item>Naruto Shippuden</item>
    </string-array>

    <string-array name="release_date_movie">
        <item>October 3 2018</item>
        <item>December 7 2018</item>
        <item>April 25 2018</item>
        <item>December 13 2018</item>
        <item>October 24 2018</item>
        <item>December 15 2018</item>
        <item>November 21 2018</item>
        <item>May 10 2018</item>
        <item>January 3 2019</item>
        <item>January 16 2019</item>
        <item>October 19 2018</item>
        <item>November 27 2018</item>
    </string-array>
    <string-array name="release_date_tv_show">
        <item>October 10 2012</item>
        <item>February 15 2019</item>
        <item>February 26 1986</item>
        <item>October 12 2009</item>
        <item>January 31 1999</item>
        <item>October 7 2014</item>
        <item>July 26 2009</item>
        <item>September 22 2014</item>
        <item>March 27 2005</item>
        <item>March 28 2019</item>
        <item>March 17 2017</item>
        <item>February 15 2007</item>
    </string-array>

    <string-array name="overview_movie">
        <item>"Seasoned musician Jackson Maine discovers — and falls in love with — struggling artist Ally. She has just about given up on her dream to make it big as a singer — until Jack coaxes her into the spotlight. But even as Allys career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons."</item>
        <item>"Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orms half-human, half-Atlantean brother and true heir to the throne."</item>
        <item>"As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain."</item>
        <item>"Five years after an ominous unseen presence drives most of society to suicide, a survivor and her two children make a desperate bid to reach safety."</item>
        <item>"Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock n roll band Queen in 1970. Hit songs become instant classics. When Mercurys increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess."</item>
        <item>"On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug."</item>
        <item>"Between personal obligations and training for his next big fight against an opponent with ties to his familys past, Adonis Creed is up against the challenge of his life."</item>
        <item>"Wisecracking mercenary Deadpool battles the evil and powerful Cable and other bad guys to save a boys life."</item>
        <item>"As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind."</item>
        <item>"In a series of escalating encounters, security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men."</item>
        <item>"Captain Glass of the USS “Arkansas” discovers that a coup detat is taking place in Russia, so he and his crew join an elite group working on the ground to prevent a war."</item>
        <item>"Many thousands of years in the future, Earth’s cities roam the globe on huge wheels, devouring each other in a struggle for ever diminishing resources. On one of these massive traction cities, the old London, Tom Natsworthy has an unexpected encounter with a mysterious young woman from the wastelands who will change the course of his life forever."</item>
    </string-array>
    <string-array name="overview_tv_show">
        <item>"Spoiled billionaire playboy Oliver Queen is missing and presumed dead when his yacht is lost at sea. He returns five years later a changed man, determined to clean up the city as a hooded vigilante armed with a bow."</item>
        <item>"The Doom Patrol’s members each suffered horrible accidents that gave them superhuman abilities — but also left them scarred and disfigured. Traumatized and downtrodden, the team found purpose through The Chief, who brought them together to investigate the weirdest phenomena in existence — and to protect Earth from what they find."</item>
        <item>"Long ago in the mountains, a fighting master known as Gohan discovered a strange boy whom he named Goku. Gohan raised him and trained Goku in martial arts until he died. The young and very strong boy was on his own, but easily managed. Then one day, Goku met a teenage girl named Bulma, whose search for the dragon balls brought her to Goku's home. "</item>
        <item>"Lucy is a 17-year-old girl, who wants to be a full-fledged mage. One day when visiting Harujion Town, she meets Natsu, a young man who gets sick easily by any type of transportation. But Natsu isn't just any ordinary kid, he's a member of one of the world's most infamous mage guilds: Fairy Tail."</item>
        <item>"Sick, twisted, politically incorrect and Freakin' Sweet animated series featuring the adventures of the dysfunctional Griffin family. "</item>
        <item>"After a particle accelerator causes a freak storm, CSI Investigator Barry Allen is struck by lightning and falls into a coma. Months later he awakens with the power of super speed, granting him the ability to move through Central City like an unseen guardian angel."</item>
        <item>"On the eve of Thanksgiving, 1971 a man, dressed in a business suit, leaps out of the back of a commercial jet with a parachute and two hundred thousand dollars in ransom money. Now for the first time in FBI history a team of citizen sleuths, using modern forensic science, is helping unravel the mystery of D.B. Cooper."</item>
        <item>"Follows the personal and professional lives of a group of doctors at Seattle’s Grey Sloan Memorial Hospital."</item>
        <item>"As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind."</item>
        <item>"This thriller and coming-of-age drama follows the journey of an extraordinary young girl as she evades the relentless pursuit of an off-book CIA agent and tries to unearth the truth behind who she is. Based on the 2011 Joe Wright film."</item>
        <item>"Danny Rand resurfaces 15 years after being presumed dead. Now, with the power of the Iron Fist, he seeks to reclaim his past and fulfill his destiny."</item>
        <item>"Naruto Shippuuden is the continuation of the original animated TV series Naruto.The story revolves around an older and slightly more matured Uzumaki Naruto and his quest to save his friend Uchiha Sasuke from the grips of the snake-like Shinobi, Orochimaru."</item>
    </string-array>

    <array name="cover_movie">
        <item>@drawable/poster_a_star</item>
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_birdbox</item>
        <item>@drawable/poster_bohemian</item>
        <item>@drawable/poster_bumblebee</item>
        <item>@drawable/poster_creed</item>
        <item>@drawable/poster_deadpool</item>
        <item>@drawable/poster_dragon</item>
        <item>@drawable/poster_glass</item>
        <item>@drawable/poster_hunterkiller</item>
        <item>@drawable/poster_mortalengine</item>
    </array>
    <array name="cover_tv_show">
        <item>@drawable/poster_arrow</item>
        <item>@drawable/poster_doom_patrol</item>
        <item>@drawable/poster_dragon_ball</item>
        <item>@drawable/poster_fairytail</item>
        <item>@drawable/poster_family_guy</item>
        <item>@drawable/poster_flash</item>
        <item>@drawable/poster_god</item>
        <item>@drawable/poster_gotham</item>
        <item>@drawable/poster_grey_anatomy</item>
        <item>@drawable/poster_hanna</item>
        <item>@drawable/poster_iron_fist</item>
        <item>@drawable/poster_naruto_shipudden</item>
    </array>
    -->
</resources>
